feat: New univariate observation added
- Discussion on students with no possession.

--- a/Part_I_exploration_template.ipynb
+++ b/Part_I_exploration_template.ipynb
@@ -3031,6 +3031,7 @@
     "\n",
     "- Students that filled the survey mostly come from Spain, Canada and Brazil etc., with highest number of Females.\n",
     "- Approximately half of the student in this study have parent with more or college degree.\n",
+    "- There are quite number of students in the survey with no access to room to study, computer to do research so as internet and text! How will this student have distinction in their examination?\n",
     "- Yes, transformation is done on some columns with observation having redundant character, leading and trailing spaces while na values were replaced with None in some columns for consistency. And some columns with inappropriate data type were converted into their right type and some columns which are categorical in nature were converted to category so as to make the data frame efficient and also reduce significant amount of memory.\n",
     "\n",
     "### Of the features you investigated, were there any unusual distributions? Did you perform any operations on the data to tidy, adjust, or change the form of the data? If so, why did you do this?\n",
@@ -3046,10 +3047,64 @@
    "source": [
     "## Bivariate Exploration\n",
     "\n",
-    "> In this section, investigate relationships between pairs of variables in your\n",
-    "data. Make sure the variables that you cover here have been introduced in some\n",
-    "fashion in the previous section (univariate exploration)."
+    "> In this section, all pairs of variables in the data will be investigated so as to identify the relationships between them."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
