feat: Confirmation and added question to all univariate visuals

--- a/Part_I_exploration_template.ipynb
+++ b/Part_I_exploration_template.ipynb
@@ -2383,7 +2383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most of the students that fill the survey comes from Spain, Canada and Brazil with highest Female gender. Did females perform well in education than male students?"
+    "Most of the students that fill the survey comes from Spain, Canada and Brazil with highest Female gender. Did females perform well in education than male students? Which country have highest students performance in examination?"
    ]
   },
   {
@@ -2428,7 +2428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Majority of students attended primary school for more than one year."
+    "Majority of students attended primary school for more than one year. Does primary educational knowledge of students increase or boost their score in international examination?"
    ]
   },
   {
