docs: Added comments to some codes
- And also change the body of each exploration section.

--- a/Notebooks/Exploration and Visualization Notebook.ipynb
+++ b/Notebooks/Exploration and Visualization Notebook.ipynb
@@ -88,6 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the pisa dataset\n",
     "pisa_df = pd.read_csv('pisa2012/pisa2012.csv', encoding='ANSI', nrows=2e5, usecols=colnames.keys(), low_memory=False)"
    ]
   },
@@ -363,6 +364,7 @@
     }
    ],
    "source": [
+    "# Top 5 rows of the dataset\n",
     "pisa_df.head()"
    ]
   },
@@ -452,6 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Renaming all columns to their right name\n",
     "pisa_df.rename(columns=colnames, inplace=True)"
    ]
   },
@@ -624,6 +627,7 @@
     }
    ],
    "source": [
+    "# Top 5 rows of the sliced columns\n",
     "pisa_df.loc[:4, :'father_job_status']"
    ]
   },
@@ -807,6 +811,7 @@
     }
    ],
    "source": [
+    "# Top 5 rows of the sliced columns\n",
     "pisa_df.loc[:4, 'possess_room':]"
    ]
   },
@@ -889,7 +894,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fix student id type\n",
+    "# Fix student id type i.e., change the type to an object\n",
     "pisa_df['stud_id'] = pisa_df['stud_id'].astype('str')"
    ]
   },
@@ -2420,7 +2425,7 @@
    "source": [
     "## Univariate Exploration\n",
     "\n",
-    "> In this section, investigation will be done on the distribution of individual variables. "
+    "In this section, investigation will be done on the distribution of individual variables. "
    ]
   },
   {
@@ -3147,7 +3152,7 @@
    "source": [
     "## Bivariate Exploration\n",
     "\n",
-    "> In this section, all pairs of variables in the data will be investigated so as to identify the relationships between them."
+    "In this section, all pairs of variables in the data will be investigated so as to identify the relationships between them."
    ]
   },
   {
