docs: Fixed misrendered markdown
- Parent schooling information section render <values...>as html.

--- a/Notebooks/Exploration and Visualization Notebook.ipynb
+++ b/Notebooks/Exploration and Visualization Notebook.ipynb
@@ -428,8 +428,8 @@
     "    * Attributions to Failure - Teacher Did Not Explain Well (ST44Q03)\n",
     "    \n",
     "* Parent schooling information and career status\n",
-    "    * Mother\\<Highest Schooling> (ST13Q01)\n",
-    "    * Father\\<Highest Schooling> (ST17Q01)\n",
+    "    * Mother [Highest Schooling] (ST13Q01)\n",
+    "    * Father [Highest Schooling] (ST17Q01)\n",
     "    * Mother Current Job Status (ST15Q01)\n",
     "    * Father Current Job Status (ST19Q01)\n",
     "    * Father Occupation Status (BFMJ2)\n",
